fix: update showing scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ body {
   overflow-x: scroll;
   height: 540px;
   width: 550px;
-  scrollbar-width: none;
+  scrollbar-width: 0px;
 }
 
 body::-webkit-scrollbar {
